Minor compile issues fix